2nd check fixes. Fields removed. Tests reworked. Some additions in README.md